pingpong/manifests/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: pingpong-svc
          servicePort: 80
